added additem and removeitem functionality to checkout item component

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+::-webkit-scrollbar
+{
+    width: 7px;
+    height: 10px;
+    background-color: #ffffff;
+}
+
+ 
+/*定义滑块 内阴影+圆角*/
+::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    background-color: #555;
+}
