--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -10,13 +10,22 @@
     top: 90px;
     right: 40px;
     z-index: 5;
+
+    .empty-message{
+      font-size: 18px;
+      margin: 80px auto;
+      opacity: 0.6;
+    }
   
     .cart-items {
+ 
+      width: 100%;
       height: 280px;
       display: flex;
       flex-direction: column;
-      overflow-y: scroll;
+      overflow-y: auto;
     }
+   
   
     button {
       margin-top: auto;
