--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,5 +1,5 @@
 .collection-item {
-    width: 22%;
+    width: 22vw;
     display: flex;
     flex-direction: column;
     height: 350px;
@@ -44,12 +44,12 @@
       font-size: 18px;
   
       .name {
-        width: 90%;
+        width: 85%;
         margin-bottom: 15px;
       }
   
       .price {
-        width: 10%;
+        width: 15%;
       }
     }
   }
